<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Produto">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/produto" />

                <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/escolha"
                android:textColorHint="@android:color/holo_orange_dark"
                android:textSize="36sp"/>

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/Salgados"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textSize="28sp" />

    <CheckBox
        android:id="@+id/ckCoxinha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/coxinha"
        android:textSize="22sp"/>

    <CheckBox
        android:id="@+id/ckEmpada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/emapada"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/ckPaoQueijo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/paodequeijo"
        android:textSize="22sp"/>

            <CheckBox
                android:id="@+id/ckEsfiraCarne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/esfira_carne"
                android:textSize="22sp"/>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/doces"
        android:textSize="28sp"
        android:textColorHint="@android:color/holo_orange_dark" />

    <CheckBox
        android:id="@+id/ckBrigadeiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/brigadeiro"
        android:textSize="22sp"/>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/bebidas"
                android:textColorHint="@android:color/holo_orange_dark"
                android:textSize="28sp" />

            <CheckBox
                android:id="@+id/ckCoca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cocacola"
                android:textSize="22sp"/>

            <CheckBox
                android:id="@+id/ckGuarana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Guaraná"
                android:textSize="22sp"/>

            <CheckBox
                android:id="@+id/ckAgua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/agua"
                android:textSize="22sp"/>


            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pagamento"
                android:textColorHint="@android:color/holo_orange_dark"
                android:textSize="28sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rdCartao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cartao"
                    android:textSize="22sp"/>

                <RadioButton
                    android:id="@+id/rdDinheiro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dinheiro"
                    android:textSize="22sp"/>
            </RadioGroup>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#FF9800"
            android:hint="@string/confirmar"
            android:onClick="pedido"
            android:textColorHint="@android:color/background_light"
            android:textSize="36sp" />

</LinearLayout>