<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Cadastro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cadastro"
        android:gravity="center"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/nomeCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/nome"
        android:textSize="22sp"
    android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="22sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/TelCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/tel"
        android:textSize="22sp"
        android:inputType="phone" />

    <EditText
        android:id="@+id/SenhaCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="22sp"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ConfSenhaCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:hint="@string/confSenha"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:srcCompat="@tools:sample/avatars" />



    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/costum_button"
        android:hint="@string/confirmar"
        android:textAllCaps="false"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>