<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Pagamento">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/pedido"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textSize="36sp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/visProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/visPag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/visTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/ajuda"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btEmail"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="enviarEmail"
            app:srcCompat="@drawable/emailajuda" />

        <ImageView
            android:id="@+id/btTel"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="telefone"
            app:srcCompat="@drawable/telefone__1_" />
    </LinearLayout>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/mapa"
        android:onClick="localiza" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/acessarLocal"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textSize="14sp" />


</LinearLayout>